<resources>
    <string name="app_name">Baking App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Baking App</string>
    <string name="nav_header_subtitle">By Langdon Himebaugh</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="empty_view_text">Empty</string>
    <string name="title_recipe_step_list">Recipe Steps</string>
    <string name="title_recipe_step_detail">Recipe Step Detail</string>

    <string name="label_ingredients">Ingredients:</string>
    <string name="label_steps">Steps:</string>

    <string name="recipe_card_image">Recipe Image</string>
    <string name="recipe_step_thumbnail">Recipe Thumbnail Image</string>
    <string name="play_arrow_image">Play Arrow Image</string>

    <string name="step">Step %d</string>

    <string name="about_heading1">Baking App</string>
    <string name="about_heading2">An App for Udacity\'s \nAndroid Developer Nanodegree</string>
    <string name="about_heading3">Version 1.0</string>
    <string name="about_paragraph1">By Langdon Himebaugh</string>

    <string name="nav_about">About</string>

</resources>
